--- a/static/style.css
+++ b/static/style.css
@@ -4527,6 +4527,10 @@ blockquote .DocsMarkdown--header-anchor-positioner {
   width: 100%;
 }
 
+.DocSearch-Button-Key {
+  padding: 0;
+}
+
 [theme=dark] .DocSearch-Button {
   border: 1px solid rgba(255, 255, 255, 0.1);
 }
